Fixed: particle overflow of progress linear bar.

--- a/src/css/components/Application_ProgressLinear.css
+++ b/src/css/components/Application_ProgressLinear.css
@@ -47,6 +47,7 @@
     right: 0;
     left: 0;
     height: 4px;
+    overflow: hidden;
     background-color: var(--color-base-gray);
     opacity: 0;
     transition-duration: 300ms;
